<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TIHC</string>
    <string name="loading_footer_text">Loading&#8230;</string>

    <!-- Error Messages -->
    <string name="schedule_empty">Couldn\'t fetch the Schedule</string>
    <string name="photo_pit_empty">Couldn\'t fetch Instagram Photos</string>
    <string name="news_empty">Couldn\'t fetch News</string>
    <string name="no_network_connection_toast">No Connection</string>
    <string name="error_message">Sorry, but the TIH Application has crashed. You can either quit now or if you want to be a nice guy you can send us over an email by tapping \'Email\' below. Have a good time at This is Hardcore.</string>

    <!-- More Navigation -->
    <string name="stuff_to_do">Stuff to do in Philly</string>
    <string name="accommodations">Accommodations</string>
    <string name="vendors">Vendors</string>
    <string name="aftershows">Guide to TIH aftershows</string>
    <string name="tihc_facebook">TIHC Facebook</string>
    <string name="tihc_twitter">TIHC Twitter</string>
    <string name="about_tihc">About TIHC</string>
    <string name="about_artisan">About Artisan</string>

    <!-- More URLs -->
    <string name="stuff_to_do_url">https://s3.amazonaws.com/appren-tihc/stuff_to_do_in_philly.html</string>
    <string name="accommodations_url">https://s3.amazonaws.com/appren-tihc/accomodations.html</string>
    <string name="vendors_url">http://www.thisishardcorefest.com/vendors</string>
    <string name="aftershows_url">http://www.thisishardcorefest.com/guide-to-tih-aftershows</string>
    <string name="tihc_facebook_url">https://www.facebook.com/thisishardcorefest</string>
    <string name="tihc_twitter_url">https://twitter.com/#!/TIHCfest</string>
    <string name="about_tihc_url">http://www.thisishardcorefest.com/</string>
    <string name="about_artisan_url">http://useartisan.com</string>

    <!-- Placeholder Text -->
    <string name="event_icon">eventIcon</string>
    <string name="photo_author_placeholder"> Photo Name Placeholder </string>
    <string name="photo_time_placeholder"> 10:00 - 11:00 PM </string>
    <string name="photo_body_placeholder"> "That whiskey burns going down Old man pour me another round </string>
    <string name="artist_name_placeholder"> Artist Name Placeholder </string>
    <string name="artist_time_placeholder"> 10:00 - 11:00 PM </string>
    <string name="artist_description_placeholder"> "That whiskey burns going down Old man pour me another round
Cause it's my last night in town
And I ain't thinking of slowing down.
No, I am fixing to drown

Till I see the sun or I can't see
Cause I got the blues and the blues got me
I'm gonna make my momma proud
Her boy on the front lines
And just like my daddy done
I ain't afraid to die.

I ain't afraid to die.
I ain't no fortunate one
But I'm proud of what I've done.
Hardships, I've seen some
I ain't a coward I don't turn and run
I don't turn and run.

So I stumble home
Pack up my old memories
Pictures of ma
My daddy's flask she gave me
Keep it near your heart
She would always say
It's all he left
And that's where it'll stay.
And her leatherbound
Book of psalms and prayers
She would always read
With patience and care.
A short walk to the cemetery
To pay respects before I leave
1901 to 1943
I run my fingers through her name
And the effigy.

The sun is up
It's all I see
Cause I got the blues
And they still got me.
Yeah they still got me
I'm gonna make my momma proud
Her hopeful new recruit
And just like my daddy done
I'm gonna bleed red, white and blue
I'm gonna bleed red, white and blue
I'm gonna bleed red, white and blue
I'm gonna bleed red, white and blue
I'm gonna bleed red, white and blue" </string>
    <string name="news_body_placeholder">SHRED</string>
    <string name="news_author_placeholder">This is Hardcore 2013</string>
    <string name="title_activity_exception">ExceptionActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>